--- a/_dev/_scss/partials/listing/_post.scss
+++ b/_dev/_scss/partials/listing/_post.scss
@@ -62,6 +62,10 @@
             > .grid__item {
                 grid-column: auto / span 3;
 
+                .post__title {
+                    font-size: 1.25em;
+                }
+
                 &:nth-child(n + 3) {
                     grid-column: auto / span 2;
                 }
@@ -74,6 +78,10 @@
             grid-template-columns: repeat(12, 1fr);
             > .grid__item {
                 grid-column: auto / span 3;
+
+                .post__title {
+                    font-size: 1.25em;
+                }
 
                 &:nth-child(n + 5) {
                     grid-column: auto / span 4;
