--- a/_dev/_scss/global.scss
+++ b/_dev/_scss/global.scss
@@ -35,11 +35,12 @@
 @use "content/section-seo";
 @use "content/section-tags";
 @use "content/section-features";
-@use "content/section-new-products";
+@use "content/section-products";
+@use "content/section-lookbook";
 
 @use "partials/listing/post";
 @use "partials/listing/product";
 @use "partials/listing/tag";
 
 //include pages in bundle or load as separate files via wp_enqueue_style?
-//@use 'pages/post';
+@use "pages/single-post";
