--- a/_dev/_scss/components/_button.scss
+++ b/_dev/_scss/components/_button.scss
@@ -24,6 +24,11 @@
 
     border-radius: 2rem;
 
+    &.button--compact {
+        height: 3rem;
+        padding: 0 1.5rem;
+        font-size: 1em;
+    }
     &.button--silent {
         background: transparent;
         color: #000;
