--- a/_dev/_scss/layout/_content.scss
+++ b/_dev/_scss/layout/_content.scss
@@ -22,6 +22,10 @@
 
         h2 {
             margin: 0;
+
+            a {
+                text-decoration: none;
+            }
         }
         p {
             margin: 1rem 0;
