category and tag listing progress; added custom query to pre_get_posts hook

--- a/_dev/_scss/base/_viewport.scss
+++ b/_dev/_scss/base/_viewport.scss
@@ -10,6 +10,10 @@
     padding-left: variables.$viewport-padding;
     padding-right: variables.$viewport-padding;
 
+    .viewport {
+        padding: 0;
+    }
+
     &.viewport--article {
         max-width: 960px;
     }
