--- a/_dev/_scss/components/nav/_nav-top.scss
+++ b/_dev/_scss/components/nav/_nav-top.scss
@@ -64,9 +64,8 @@
 
                 > a {
                     display: block;
-                    font-family: "Jost", sans-serif;
-                    font-weight: 500;
-                    font-size: 1.25em;
+                    font-size: 0.875em;
+                    font-weight: 600;
                 }
 
                 &.menu--open {
@@ -89,13 +88,11 @@
                 }
                 &.item--store {
                     a {
-                        background: variables.$black;
+                        background: #000;
                         color: #fff;
-                        font-size: 1em;
+                        padding: 0.375rem 1rem;
+                        border-radius: 1rem;
                         font-weight: 500;
-                        text-transform: uppercase;
-                        padding: 0.5rem 1rem;
-                        letter-spacing: 0.05em;
                     }
                 }
             }
@@ -190,7 +187,7 @@
         a {
             display: block;
             font-size: 1.125em;
-            font-weight: 400;
+            font-weight: 300;
             padding: 1rem 0;
             color: #fff;
         }
