--- a/_dev/_scss/partials/listing/_post.scss
+++ b/_dev/_scss/partials/listing/_post.scss
@@ -62,6 +62,10 @@
                 grid-row-start: 2;
                 grid-column: 1 / -1 !important;
             }
+            &.item--features-extra {
+                grid-row-start: 5;
+                grid-column: 1 / -1 !important;
+            }
         }
 
         @media (min-width: variables.$breakpoint_mobile + 1px) {
