--- a/_dev/_scss/components/_button.scss
+++ b/_dev/_scss/components/_button.scss
@@ -47,6 +47,9 @@
             }
         }
     }
+    &.button--secondary {
+        background: #4a4a4a;
+    }
     &.button--white {
         background: #fff;
         color: #000;
