--- a/_dev/_scss/components/_pagination.scss
+++ b/_dev/_scss/components/_pagination.scss
@@ -5,7 +5,7 @@
  * Notice: comments pagination use default WordPress markup, styles located in components/comments.scss
  */
 .pagination {
-    max-width: 30rem;
+    //max-width: 30rem;
     margin: 2rem auto;
 
     .button {
