--- a/views/content/section-posts.twig
+++ b/views/content/section-posts.twig
@@ -1,4 +1,4 @@
-<section class="content__section section-posts">
+<section class="content__section section-posts section--no-margin">
 	<div class="viewport viewport--laptop">
 		<ul class="posts__grid {% if grid is defined %}grid--{{ grid }}{% endif %}">
 			{% for post in posts %}
