--- a/views/content/section-instagram.twig
+++ b/views/content/section-instagram.twig
@@ -41,7 +41,7 @@
   ] 
 %}
 
-<section class="content__section section-instagram section--no-margin">
+<section class="content__section section-instagram">
 
 	<div class="grid__item item--gallery">
 		{% for image in gallery_1 %}
