grid archive and tags pagination css fixes

--- a/_dev/_scss/partials/listing/_post.scss
+++ b/_dev/_scss/partials/listing/_post.scss
@@ -62,10 +62,17 @@
             &.item--features {
                 grid-row-start: 2;
                 grid-column: 1 / -1 !important;
+
+                .section-features {
+                    margin: 0;
+                }
             }
             &.item--features-extra {
                 grid-row-start: 5;
                 grid-column: 1 / -1 !important;
+                .section-features {
+                    margin: 0;
+                }
             }
         }
 
