added section nav to home and archive pages

--- a/_dev/_scss/components/_button.scss
+++ b/_dev/_scss/components/_button.scss
@@ -50,6 +50,19 @@
     &.button--secondary {
         background: #4a4a4a;
     }
+    &.button--transparent {
+        background: transparent;
+        border: 2px solid #000;
+        color: #000;
+        font-weight: 500;
+
+        @media (hover: hover) {
+            &:hover {
+                background: inherit;
+                text-decoration: underline;
+            }
+        }
+    }
     &.button--white {
         background: #fff;
         color: #000;
