--- a/_dev/_scss/global.scss
+++ b/_dev/_scss/global.scss
@@ -37,6 +37,7 @@
 @use "content/section-features";
 @use "content/section-products";
 @use "content/section-lookbook";
+@use "content/section-nav";
 
 @use "partials/listing/post";
 @use "partials/listing/product";
