--- a/views/index.twig
+++ b/views/index.twig
@@ -20,6 +20,8 @@
 
 	{% include 'content/section-posts.twig' with { 'posts' : posts|slice(7, 7), 'grid' : 'alt'} %}
 
+	{% include 'content/section-nav.twig' %}
+
 	{% include 'content/section-instagram.twig' %}
 	{% include 'content/section-seo.twig' %}
 
