--- a/views/pages/category.twig
+++ b/views/pages/category.twig
@@ -33,9 +33,8 @@
 		</section>
 	</main>
 
-	<aside
-		class="side__content">
-		{# {% include 'content/section-nav.twig' with { 'show_archive' : false } %} #}
+	<aside class="side__content">
+		{% include 'content/section-nav.twig' with { 'show_home' : true, 'show_archive' : false } %}
 		{% include 'content/section-instagram.twig' %}
 		{% include 'content/section-seo.twig' %}
 	</aside>
