--- a/_dev/_scss/base/_typography.scss
+++ b/_dev/_scss/base/_typography.scss
@@ -30,8 +30,9 @@ h2 {
 }
 h3 {
     font-size: 1.5em;
-    font-weight: 500;
+    font-weight: 400;
     margin-bottom: 1rem;
+    color: #000;
 }
 h4 {
     font-size: 0.75em;
