--- a/views/single-post.twig
+++ b/views/single-post.twig
@@ -15,6 +15,8 @@
 
 	</main>
 
-	<aside class="side__content"></aside>
+	<aside class="side__content">
+		{% include 'content/section-instagram.twig' %}
+	</aside>
 
 {% endblock %}
