single post template improvements, added section store categories

--- a/_dev/_scss/global.scss
+++ b/_dev/_scss/global.scss
@@ -38,6 +38,7 @@
 @use "content/section-products";
 @use "content/section-lookbook";
 @use "content/section-nav";
+@use "content/section-store-categories";
 
 @use "partials/listing/post";
 @use "partials/listing/product";
