--- a/views/single-post.twig
+++ b/views/single-post.twig
@@ -16,6 +16,7 @@
 	</main>
 
 	<aside class="side__content">
+		{% include 'content/section-store-categories.twig' %}
 		{% include 'content/section-instagram.twig' %}
 	</aside>
 
