--- a/_dev/_scss/pages/single-post.scss
+++ b/_dev/_scss/pages/single-post.scss
@@ -25,4 +25,21 @@
             justify-content: center;
         }
     }
+
+    .section-products {
+        .shop-category {
+            @media (min-width: variables.$breakpoint_mobile + 1px) {
+                border-top: 1px solid #e7e7e7;
+                border-bottom: 1px solid #e7e7e7;
+                padding: 3rem 0;
+            }
+        }
+
+        &:last-child {
+            .shop-category {
+                border-bottom: 0;
+                padding-bottom: 0;
+            }
+        }
+    }
 }
