--- a/views/content/section-nav.twig
+++ b/views/content/section-nav.twig
@@ -1,4 +1,4 @@
-<section class="content__section section-nav{% if class %} {{ class }}{% endif %}">
+<section class="content__section section-nav{% if cssClass %} {{ cssClass }}{% endif %}">
 	<div class="viewport">
 		<nav>
 			<ul class="nav__list">
