post thumbnail and post item fixes

--- a/views/partials/post/item.twig
+++ b/views/partials/post/item.twig
@@ -14,8 +14,7 @@
 		{% endblock %}
 
 		<h2 class="post__title">
-			<a href="{{post.link}}">{{post.id}}
-				{{ post.title }}</a>
+			<a href="{{post.link}}">{{ post.title }}</a>
 		</h2>
 		<p>{{ post.post_excerpt }}</p>
 		<a href="{{post.link}}" class="post__cta button button--silent">{{ __('Czytaj dalej', 'theme') }}</a>
