--- a/views/partials/post/post-thumbnail.twig
+++ b/views/partials/post/post-thumbnail.twig
@@ -1,6 +1,6 @@
 {% if post.thumbnail %}
 	<section class="post__thumbnail">
-		<a href="{{ link.store }}">
+		<a href="{{ links.store }}">
 			<figure>
 				<picture>
 					<source srcset="{{ post.thumbnail.src('large')|towebp }}" type="image/webp">
