--- a/views/content/section-tags.twig
+++ b/views/content/section-tags.twig
@@ -1,6 +1,6 @@
 <section class="content__section section-tags">
 
-	<div class="viewport viewport--laptop">
+	<div class="viewport viewport--article">
 
 		<h4>{{ __('Przeglądaj najpopularniejsze tagi', 'theme') }}</h4>
 		{% include 'partials/tags-list.twig' with { 'tags' : popular_tags, 'cssClass' : false }  %}
