--- a/views/pages/topics.twig
+++ b/views/pages/topics.twig
@@ -18,7 +18,7 @@
 
 			{% include "components/breadcrumbs.twig" %}
 
-			<div class="viewport viewport--laptop">
+			<div class="viewport viewport--article">
 				<ul class="tags__list list--archive">
 					{% for tag in tags %}
 						<li class="list__item item--tag">
