--- a/_dev/_scss/base/_text.scss
+++ b/_dev/_scss/base/_text.scss
@@ -34,7 +34,7 @@
 
         margin: 2rem 0;
 
-        border-left: 0.25rem solid blue;
+        border-left: 0.25rem solid #000;
         padding-left: 2rem;
 
         p {
@@ -93,6 +93,10 @@
         b {
             color: variables.$black;
             font-weight: 600;
+        }
+
+        &:last-child {
+            margin: 0;
         }
     }
 
